<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swpDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pickled_bluewood"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pickled_bluewood"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="184dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgPoster"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/sandy_brown" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/ebony_clay"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/detailInfo"
                        android:text="@string/title"
                        android:textColor="@color/sandy_brown" />

                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/detailInfo"
                        android:ellipsize="end"
                        android:maxLines="4"
                        android:textColor="@color/gallery"
                        tools:text="@string/title" />

                    <TextView
                        style="@style/detailInfo"
                        android:text="@string/release_date"
                        android:textColor="@color/sandy_brown" />

                    <TextView
                        android:id="@+id/tvYear"
                        style="@style/detailInfo"
                        android:textColor="@color/gallery"
                        tools:text="@string/release_date" />

                    <TextView
                        style="@style/detailInfo"
                        android:text="@string/rating"
                        android:textColor="@color/sandy_brown" />

                    <TextView
                        android:id="@+id/tvRating"
                        style="@style/detailInfo"
                        android:textColor="@color/gallery"
                        app:drawableStartCompat="@drawable/ic_baseline_star_24"
                        tools:text="@string/rating" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="64dp"
                app:cardBackgroundColor="@color/ebony_clay"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgPoster">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textColor="@color/sandy_brown"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/gallery"
                        android:textSize="16sp"
                        tools:text="@string/overview" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>